[package]
name = "ghost-rs"
authors = ["Maali<mohamgoham@gmail.com>"]
description = "Crate using std::env for stealthily removing EXE"
version = "0.2.0"
homepage = "https://github.com/brohamgoham/ghost-rs"
documentation = "https://docs.rs/ghost-rs"
readme = "README.md"
license = "MIT"
repository = "https://github.com/brohamgoham/ghost-rs"
edition = "2021"


[lib]
crate-type = ["lib", "staticlib"]

[features]
debug = []

[target.'cfg(target_os="windows")'.dependencies]
windows = { version = "0.46.0", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_LibraryLoader", "Win32_Security"] }

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-pc-windows-gnu"
targets = ["x86_64-apple-darwin", "x86_64-pc-windows-msvc", "x86_64-unknown-linux-gnu"]